[package]
name = "odbc-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
odbc-sys = { version = "0.24.0", features = ["odbc_version_4"] }
widestring = "1.0.2"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]

[lib]
crate-type = ["cdylib"]
name = "odbc_tracer"

[profile.release]
strip = "debuginfo"
debug = false
